--- a/style2.css
+++ b/style2.css
@@ -850,3 +850,74 @@ footer {
     width: auto;
 }
 
+
+
+#data-container {
+  
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding-bottom: 20px;
+    margin-top: 20px;
+}
+
+
+.matratt {
+    flex: 0 0 calc(50% - 10px); /* Två kolumner */
+    border-radius: 10px;
+    background-color: white;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    min-height: 500px; /* Anpassa höjden om det behövs */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex-basis: calc(50% - 20px);
+    max-width: calc(50% - 20px);
+    padding: 2px;
+    margin: 5px;
+}
+
+
+.matratt iframe {
+    width: 100%;
+    height: auto;
+    min-height: 400px; /* Anpassa efter behov */
+    max-height: 500px;
+    border: 1px solid rgb(255, 255, 255);
+    border-radius: 3px;
+}
+
+
+.matratt-title {
+    background-color: rgba(0, 0, 0, 0.8); /* Svart bakgrund */
+    color: rgb(255, 255, 255);
+    font-size: 10px;
+    padding: 5px;
+    border-radius: 8px;
+    text-align: center;
+    line-height: 1.4;
+    overflow: hidden;
+}
+
+/* Anpassning för mobil */
+@media (max-width: 480px) {
+    .matratt {
+        flex: 1 0 50%; /* Två i bredd på små skärmar */
+        padding: 5px;
+        margin: 5px;
+    }
+}
+
+.instagram-media {
+    max-width: 100% !important; /* Se till att inlägg fyller sin container */
+    min-width: 250px !important; /* Säkerställ att de inte blir för smala */
+    width: 100% !important;
+    height: auto !important;
+    margin: 10px 0 !important; /* Ger lite avstånd mellan inlägg */
+}
+
+.instagram-media {
+    max-width: 100% !important;
+    width: 100% !important;
+    min-width: unset !important;
+}
