--- a/style2.css
+++ b/style2.css
@@ -251,7 +251,7 @@ html {
         height: 40px;
     }
 
-   
+
 
     body,
     html {
@@ -494,7 +494,7 @@ html {
     width: 60%;
     height: auto;
     display: block;
-    
+
 }
 
 @media (min-width: 768px) {
@@ -502,7 +502,7 @@ html {
         width: 75px;
         height: 75px;
         border-radius: 10px;
-        
+
     }
 }
 
@@ -693,7 +693,7 @@ footer {
 
 
 #data-container {
-  
+
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -701,27 +701,43 @@ footer {
     margin-top: 20px;
 }
 
-
+/* Standard: Två kolumner på mobil */
 .matratt {
     flex: 0 0 calc(50% - 10px); /* Två kolumner */
+    max-width: calc(50% - 10px);
     border-radius: 10px;
     background-color: white;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    min-height: 500px; /* Anpassa höjden om det behövs */
+    min-height: 500px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    flex-basis: calc(50% - 20px);
-    max-width: calc(50% - 20px);
-    padding: 2px;
+    padding: 10px;
     margin: 5px;
+}
+
+/* 3 kolumner på medelstora skärmar */
+@media (min-width: 768px) {
+    .matratt {
+        flex: 0 0 calc(33.333% - 10px);
+        max-width: calc(33.333% - 10px);
+    }
+}
+
+/* 5 kolumner på stora skärmar */
+@media (min-width: 1200px) {
+    .matratt {
+        flex: 0 0 calc(20% - 10px);
+        max-width: calc(20% - 10px);
+    }
 }
 
 
 .matratt iframe {
     width: 100%;
     height: auto;
-    min-height: 400px; /* Anpassa efter behov */
+    min-height: 400px;
+    /* Anpassa efter behov */
     max-height: 500px;
     border: 1px solid rgb(255, 255, 255);
     border-radius: 3px;
@@ -729,7 +745,8 @@ footer {
 
 
 .matratt-title {
-    background-color: rgba(0, 0, 0, 0.8); /* Svart bakgrund */
+    background-color: rgba(0, 0, 0, 0.8);
+    /* Svart bakgrund */
     color: rgb(255, 255, 255);
     font-size: 10px;
     padding: 5px;
@@ -742,18 +759,22 @@ footer {
 /* Anpassning för mobil */
 @media (max-width: 480px) {
     .matratt {
-        flex: 1 0 50%; /* Två i bredd på små skärmar */
+        flex: 1 0 50%;
+        /* Två i bredd på små skärmar */
         padding: 5px;
         margin: 5px;
     }
 }
 
 .instagram-media {
-    max-width: 100% !important; /* Se till att inlägg fyller sin container */
-    min-width: 250px !important; /* Säkerställ att de inte blir för smala */
+    max-width: 100% !important;
+    /* Se till att inlägg fyller sin container */
+    min-width: 250px !important;
+    /* Säkerställ att de inte blir för smala */
     width: 100% !important;
     height: auto !important;
-    margin: 10px 0 !important; /* Ger lite avstånd mellan inlägg */
+    margin: 10px 0 !important;
+    /* Ger lite avstånd mellan inlägg */
 }
 
 .instagram-media {
