--- a/style2.css
+++ b/style2.css
@@ -708,10 +708,10 @@ footer {
 
 
 .matratt-title {
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: white;
     /* Svart bakgrund */
-    color: rgb(255, 255, 255);
-    font-size: 10px;
+    color: rgb(0, 0, 0);
+    font-size: 12px;
     padding: 5px;
     border-radius: 8px;
     text-align: center;
