--- a/style2.css
+++ b/style2.css
@@ -708,7 +708,7 @@ footer {
 
 
 .matratt-title {
-    background-color: white;
+    background-color: #f2f2f0;
     /* Svart bakgrund */
     color: rgb(0, 0, 0);
     font-size: 12px;
