--- a/style2.css
+++ b/style2.css
@@ -410,6 +410,27 @@ html {
     -webkit-tap-highlight-color: transparent;
 }
 
+.image-button.inactive {
+    opacity: 0.5;
+    pointer-events: none;
+}
+
+.image-button .badge {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    background-color: red;
+    color: white;
+    font-size: 12px;
+    border-radius: 50%;
+    padding: 2px 6px;
+    display: inline-block;
+}
+
+.image-button .badge.hidden {
+    display: none;
+}
+
 .image-button:focus,
 .image-button:active {
     outline: none;
@@ -718,6 +739,9 @@ footer {
     overflow: hidden;
     margin-bottom: 0px !important;
     padding-bottom: 0px !important;
+    margin-top: auto ; /* Tvingar titeln att ligga längst ner */
+   
+    
 }
 
 /* Anpassning för mobil */
